# AlembicForMetasequoia

./: .gitignore  AlembicForMetasequoia.bat  AlembicForMetasequoia.sln  CMakeLists.txt  MeshUtils.vcxproj  Readme.md  Third Party Notices.md  make_links.bat  mqabc.vcxproj  mqabc.vcxproj.filters  mqabcPlayer.vcxproj  mqabcPlayer.vcxproj.filters  mqabcRecorder.vcxproj  mqabcRecorder.vcxproj.filters  mqsdk.vcxproj  setup.bat  setup.vcxproj
MeshUtils/: muMisc.h
Source/: AlembicForMetasequoia.sln  CMakeLists.txt  MeshUtils.vcxproj  build.bat  mqabcPlayer.vcxproj  mqabcRecorder.vcxproj  mqabcRecorder.vcxproj.filters
Source/MeshUtils/: muMisc.cpp  muStream.cpp  muStream.h
Source/Test/: TestMeshUtils.cpp
Source/cmake/: FindAlembic.cmake
Source/mqabc/: mqabc.cpp  mqabc.h  mqabcMesh.cpp  mqabcMesh.h
Source/mqabc/Player/: CMakeLists.txt
Source/mqabc/Recorder/: CMakeLists.txt  mqabcRecorder.cpp  mqabcRecorderPlugin.h  mqabcRecorderWindow.cpp  mqabcRecorderWindow.h
cmake/: FindOpenEXR.cmake
mqabc/: mqabc.cpp  mqabc.h  mqabcMesh.cpp  mqabcMesh.h  mqabcPlayer.cpp  mqabcPlayerNodes.cpp  mqabcPlayerPlugin.cpp  mqabcPlayerPlugin.h  mqabcPlayerWindow.cpp  mqabcPlayerWindow.h  mqabcPlugin.cpp  mqabcPlugin.h  mqabcRecorder.cpp  mqabcRecorderPlugin.cpp  mqabcRecorderPlugin.h  mqabcRecorderWindow.cpp  mqabcRecorderWindow.h  mqabcUI.cpp  mqabcUI.h  pch.h
mqabc/Player/: mqabcPlayer.cpp  mqabcPlayerPlugin.cpp  mqabcPlayerPlugin.h  mqabcPlayerWindow.cpp  mqabcPlayerWindow.h
mqabc/Recorder/: mqabcRecorder.cpp  mqabcRecorderPlugin.cpp  mqabcRecorderPlugin.h  mqabcRecorderWindow.cpp  mqabcRecorderWindow.h
mqsdk/: sdk_Include.h
